--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -66,10 +66,10 @@
                 </div>
             </div>
         </div>
-        <div class="col-4" style="margin-left: 0; padding-left: 0">
+        <div class="col-4" style="margin-left: 0; padding-left: 0;">
             <div class="row p-1 m-1 p-1 beauty-bg o-scroll-y">
                 <label class="label">Random Access Memory</label>
-                <table class="table table-hover" id="main-memory"></table>
+                <table class="table table-hover" id="main-memory" style="height: 100vh;"></table>
             </div>
         </div>
     </div>
