--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -39,11 +39,12 @@
                                     Settings
                                 </button>
                                 <div class="dropdown-menu" aria-labelledby="btnGroupSettings">
-                                    <a class="dropdown-item" href="#">Colors</a>
-                                    <a class="dropdown-item" href="#">Numeric Base</a>
+                                    <a class="dropdown-item" data-toggle="modal" data-target="#modal-color-settings">Colors</a>
+                                    <a class="dropdown-item" data-toggle="modal" data-target="#modal-numericbase-settings">Numeric Base</a>
+                                    <a class="dropdown-item" data-toggle="modal" data-target="#modal-run-settings">Running Configurations</a>
                                 </div>
                             </div>
-                            <button type="button" class="btn btn-primary" id="button-run">Write</button>
+                            <button type="button" class="btn btn-primary" id="button-run">Run</button>
                         </div>
                     </div>
                     <div class="row p-1 m-1 beauty-bg">
@@ -73,17 +74,103 @@
             </div>
         </div>
     </div>
+
+    <!-- Modal Colors -->
+    <div class="modal" tabindex="-1" role="dialog" id="modal-color-settings">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Color Settings</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-6">
+                            Text Color
+                        </div>
+                        <div class="col-6 right-align">
+                            <input type="color" value="#41ED1E" class="mini-square" id="color-text">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6">
+                            Background Color
+                        </div>
+                        <div class="col-6 right-align">
+                            <input type="color" value="#000000" class="mini-square" id="color-background">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal Numeric Base -->
+    <div class="modal" tabindex="-1" role="dialog" id="modal-numericbase-settings">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Numeric Base</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <select id="numeric-base-display" class="form-control">
+                        <option value="hex">Hexadecimal</option>
+                        <option value="dec">Decimal</option>
+                        <option value="bin">Binary</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal Run -->
+    <div class="modal" tabindex="-1" role="dialog" id="modal-run-settings">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Running Configurations</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-8">
+                            Delay Between Instructions (Seconds)
+                        </div>
+                        <div class="col-4 right-align">
+                            <input type="number" min="0" max="16" value="1" id="input-instruction-delay" class="form-control">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- Modal Assembler Status -->
+    <div class="modal" tabindex="-1" role="dialog" id="modal-assemblerstatus">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Assembler Status</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body" id="assembler-status-text">
+
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
-<div hidden>
-    <select id="numeric-base-display">
-        <option value="hex">Hexadecimal</option>
-        <option value="dec">Decimal</option>
-        <option value="bin">Binary</option>
-    </select>
-    <input type="color" value="#000000" class="mini-square" id="color-background">
-    <input type="color" value="#41ED1E" class="mini-square" id="color-text">
-</div>
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
